create login & signup

--- a/about.html
+++ b/about.html
@@ -51,7 +51,8 @@
                                         <div class="form-element has-icon">
                                             <input type="text" class="input-field"
                                                 placeholder="کلمه کلیدی را وارد نمایید">
-                                            <button type="submit" class="submit-btn"><i
+                                            <button type="submit" class="submit-btn">
+                                                <i style="position: absolute; left: 10px; top: 12px;"
                                                     class="fas fa-search"></i></button>
                                         </div>
                                     </form>
