--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> بیگ انیا | قالب فروشگاهی چند منظوره HTML </title>
+    <title> ورود </title>
     <!-- favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- bootstrap -->
@@ -52,6 +52,7 @@
                                             <input type="text" class="input-field"
                                                 placeholder="کلمه کلیدی را وارد نمایید">
                                             <button type="submit" class="submit-btn"><i
+                                                    style="position: absolute; left: 10px; top: 12px;"
                                                     class="fas fa-search"></i></button>
                                         </div>
                                     </form>
@@ -246,24 +247,24 @@
                             <div class="col-lg-6">
                                 <div class="left-content-area">
                                     <div class="top-content">
-                                        <h4 class="title">دوباره خوش آمدید</h4>
-                                        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از
-                                            طراحان گرافیک است. لورم ایپسوم متن ساختگی با تو </p>
+                                        <h4 class="title">حساب ندارید؟</h4>
+                                        <p>
+                                            اگر حساب ندارید ، میتوانید حساب بسازید
+                                        </p>
                                     </div>
                                     <div class="bottom-content">
                                         <div class="left-content">
                                             <div class="thumb">
-                                                <img src="assets/img/login-image.jpg" alt="login image">
+                                                <img src="pic/vectors/user.png" width="140px" height="140px"
+                                                    alt="login image">
                                             </div>
                                         </div>
                                         <div class="right-content">
                                             <ul>
                                                 <li class="active">
-                                                    <a href="#">ورود به عنوان مهمان</a>
+                                                    <a href="signup.html">ثبت نام</a>
                                                 </li>
-                                                <li>
-                                                    <a href="#">حذف حساب کاربری</a>
-                                                </li>
+
                                             </ul>
                                         </div>
                                     </div>
@@ -273,9 +274,7 @@
                                 <div class="right-contnet-area">
                                     <div class="top-content">
                                         <h4 class="title">ورود به حساب</h4>
-                                        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از
-                                            طراحان گرافیک است. لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ
-                                            و با استفاده از طراحان گرافیک است. </p>
+
                                     </div>
                                     <div class="bottom-content">
                                         <form action="#" class="login-form">
