--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> بیگ انیا | قالب فروشگاهی چند منظوره HTML </title>
+    <title> ثبت نام </title>
     <!-- favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- bootstrap -->
@@ -52,6 +52,7 @@
                                             <input type="text" class="input-field"
                                                 placeholder="کلمه کلیدی را وارد نمایید">
                                             <button type="submit" class="submit-btn"><i
+                                                    style="position: absolute; left: 10px; top: 12px;"
                                                     class="fas fa-search"></i></button>
                                         </div>
                                     </form>
@@ -100,7 +101,7 @@
                 <ul class="navbar-nav">
                     <!-- navbar- nav -->
 
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">خانه</a>
                     </li>
                     <li class="nav-item dropdown mega-menu">
@@ -245,14 +246,14 @@
                             <div class="col-lg-6 padding-right-0">
                                 <div class="left-content-area signup-bg">
                                     <div class="img-wrapper">
-                                        <a href="#" class="boxed-btn">ایجاد حساب کاربری</a>
+                                        <a href="login.html" class="boxed-btn">ورود به حساب</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="right-contnet-area">
                                     <div class="top-content">
-                                        <h4 class="title">امروز ثبت نام کنید</h4>
+                                        <h4 class="title">ثبت نام</h4>
                                         <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از
                                             طراحان گرافیک است. .</p>
                                     </div>
@@ -265,13 +266,9 @@
                                             <div class="form-element">
                                                 <input type="password" class="input-field" placeholder="رمز عبور">
                                             </div>
-                                            <div class="block-link">
-                                                <a href="#" class="facebook">با فیس بوک وارد شوید</a>
-                                                <a href="#" class="google">با + Google وارد شوید</a>
-                                            </div>
-                                            <div class="btn-wrapper">
-                                                <button type="submit" class="submit-btn">ثبت نام</button>
-                                                <a href="#" class="link">در حال حاضر حساب کاربری دارید؟</a>
+
+                                            <div class="btn-wrapper text-center">
+                                                <a href="#" type="submit" class="submit-btn">ثبت نام</a>
                                             </div>
                                         </form>
                                     </div>
