--- a/category.html
+++ b/category.html
@@ -55,6 +55,7 @@
                                             <input type="text" class="input-field"
                                                 placeholder="کلمه کلیدی را وارد نمایید">
                                             <button type="submit" class="submit-btn"><i
+                                                    style="position: absolute; left: 10px; top: 12px;"
                                                     class="fas fa-search"></i></button>
                                         </div>
                                     </form>
