--- a/product-details.html
+++ b/product-details.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> بیگ انیا | قالب فروشگاهی چند منظوره HTML </title>
+    <title> جزییات محصول </title>
     <!-- favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- bootstrap -->
@@ -52,6 +52,7 @@
                                             <input type="text" class="input-field"
                                                 placeholder="کلمه کلیدی را وارد نمایید">
                                             <button type="submit" class="submit-btn"><i
+                                                    style="position: absolute; left: 10px; top: 12px;"
                                                     class="fas fa-search"></i></button>
                                         </div>
                                     </form>
