create card in cardPage

--- a/category.html
+++ b/category.html
@@ -411,7 +411,49 @@
             <div class="cart-products">
                 <!-- cart product -->
                 <h4 class="title">سبد خرید</h4>
-                <h4 class="text-white">چیزی وجود ندارد</h4>
+
+                <div class="single-product-item">
+                    <!-- single product item -->
+                    <div class="thumb">
+                        <img src="pic/b1.jpg" width="80px" height="80px" alt="recent review">
+                    </div>
+                    <div class="content">
+                        <h4 class="title">باتری ماشین</h4>
+                        <div class="price"><span class="pprice text-white">350.00 تومان</span> <del class="dprice"
+                                style="color: #c25f5f;">500.00
+                                تومان</del></div>
+                        <a href="#" class="remove-cart">حذف</a>
+                    </div>
+                </div><!-- //. single product item -->
+
+                <div class="single-product-item">
+                    <!-- single product item -->
+                    <div class="thumb">
+                        <img src="pic/b2.jpg" width="80px" height="80px" alt="recent review">
+                    </div>
+                    <div class="content">
+                        <h4 class="title">باتری ماشین</h4>
+                        <div class="price"><span class="pprice text-white">350.00 تومان</span> <del class="dprice"
+                                style="color: #c25f5f;">500.00
+                                تومان</del></div>
+                        <a href="#" class="remove-cart">حذف</a>
+                    </div>
+                </div><!-- //. single product item -->
+
+                <div class="single-product-item">
+                    <!-- single product item -->
+                    <div class="thumb">
+                        <img src="pic/b3.jpg" width="80px" height="80px" alt="recent review">
+                    </div>
+                    <div class="content">
+                        <h4 class="title">باتری ماشین</h4>
+                        <div class="price"><span class="pprice text-white">350.00 تومان</span> <del class="dprice"
+                                style="color: #c25f5f;">500.00
+                                تومان</del></div>
+                        <a href="#" class="remove-cart">حذف</a>
+                    </div>
+                </div><!-- //. single product item -->
+
                 <div class="btn-wrapper">
                     <a href="cart.html" class="boxed-btn">بررسی و پرداخت</a>
                 </div>
