--- a/blog.html
+++ b/blog.html
@@ -642,7 +642,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-widget about">
                             <div class="widget-body">
-                                <a href="index-3.html" class="footer-logo">
+                                <a href="index.html" class="footer-logo">
                                     <h3 class="text-white">آقای باتری</h3>
                                 </a>
                                 <ul class="contact-info-list">
