--- a/category.html
+++ b/category.html
@@ -200,7 +200,7 @@
                     <li class="search" id="search"><i class="fas fa-search"></i> </li>
                     <li class="right-menu"> <a class="fas fa-user usericon" href="login.html"></a> </li>
                     <li class="cart" id="cart"><i class="fas fa-shopping-basket"></i>
-                        <span class="badge">0</span>
+                        <span class="badge" id="ShopNum">0</span>
                     </li>
                 </ul>
             </div>
@@ -412,7 +412,7 @@
                 <!-- cart product -->
                 <h4 class="title">سبد خرید</h4>
 
-                <div class="single-product-item">
+                <div class="single-product-item" style="display: none;" id="shopProducts1">
                     <!-- single product item -->
                     <div class="thumb">
                         <img src="pic/b1.jpg" width="80px" height="80px" alt="recent review">
@@ -422,11 +422,11 @@
                         <div class="price"><span class="pprice text-white">350.00 تومان</span> <del class="dprice"
                                 style="color: #c25f5f;">500.00
                                 تومان</del></div>
-                        <a href="#" class="remove-cart">حذف</a>
+                        <a href="#" class="remove-cart" onclick=" deleteINShop() ">حذف</a>
                     </div>
                 </div><!-- //. single product item -->
 
-                <div class="single-product-item">
+                <div class="single-product-item" style="display: none;" id="shopProducts2">
                     <!-- single product item -->
                     <div class="thumb">
                         <img src="pic/b2.jpg" width="80px" height="80px" alt="recent review">
@@ -436,11 +436,11 @@
                         <div class="price"><span class="pprice text-white">350.00 تومان</span> <del class="dprice"
                                 style="color: #c25f5f;">500.00
                                 تومان</del></div>
-                        <a href="#" class="remove-cart">حذف</a>
+                        <a href="#" class="remove-cart" onclick=" deleteINShop() ">حذف</a>
                     </div>
                 </div><!-- //. single product item -->
 
-                <div class="single-product-item">
+                <div class="single-product-item" style="display: none;" id="shopProducts3">
                     <!-- single product item -->
                     <div class="thumb">
                         <img src="pic/b3.jpg" width="80px" height="80px" alt="recent review">
@@ -450,7 +450,7 @@
                         <div class="price"><span class="pprice text-white">350.00 تومان</span> <del class="dprice"
                                 style="color: #c25f5f;">500.00
                                 تومان</del></div>
-                        <a href="#" class="remove-cart">حذف</a>
+                        <a href="#" class="remove-cart" onclick=" deleteINShop() ">حذف</a>
                     </div>
                 </div><!-- //. single product item -->
 
@@ -607,7 +607,8 @@
                                         <div class="thumb">
                                             <img src="pic/b23.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">افزودن به سبد</a>
+                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
+                                                    سبد</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -625,7 +626,8 @@
                                         <div class="thumb">
                                             <img src="pic/b22.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">افزودن به سبد</a>
+                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
+                                                    سبد</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -643,7 +645,8 @@
                                         <div class="thumb">
                                             <img src="pic/b3.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">افزودن به سبد</a>
+                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
+                                                    سبد</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -661,7 +664,8 @@
                                         <div class="thumb">
                                             <img src="pic/b4.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">افزودن به سبد</a>
+                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
+                                                    سبد</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -679,7 +683,8 @@
                                         <div class="thumb">
                                             <img src="pic/b5.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">افزودن به سبد</a>
+                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
+                                                    سبد</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -697,7 +702,8 @@
                                         <div class="thumb">
                                             <img src="pic/b6.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">افزودن به سبد</a>
+                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
+                                                    سبد</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -715,7 +721,8 @@
                                         <div class="thumb">
                                             <img src="pic/b7.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">افزودن به سبد</a>
+                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
+                                                    سبد</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -733,7 +740,8 @@
                                         <div class="thumb">
                                             <img src="pic/b8.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">افزودن به سبد</a>
+                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
+                                                    سبد</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -751,7 +759,8 @@
                                         <div class="thumb">
                                             <img src="pic/b9.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">افزودن به سبد</a>
+                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
+                                                    سبد</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -872,7 +881,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-widget about">
                             <div class="widget-body">
-                                <a href="index-3.html" class="footer-logo">
+                                <a href="index.html" class="footer-logo">
                                     <h3 class="text-white">آقای باتری</h3>
                                 </a>
                                 <ul class="contact-info-list">
