--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                                         <i class="fas fa-envelope"></i>
                                     </div>
                                     <div class="content">
-                                        <h4 class="title">ایمیل ما</h4>
+                                        <h4 class="title mb-1">ایمیل ما</h4>
                                         <span class="details">info@examplte.com</span>
                                     </div>
                                 </div>
@@ -75,8 +75,8 @@
                                         <i class="fas fa-phone"></i>
                                     </div>
                                     <div class="content">
-                                        <h4 class="title">پشتیبانی رایگان</h4>
-                                        <span class="details">(012) 800 456 789</span>
+                                        <h4 class="title mb-1">پشتیبانی</h4>
+                                        <span class="details">021 666666</span>
                                     </div>
                                 </div>
                             </li>
@@ -106,8 +106,8 @@
                     </li>
                     <li class="nav-item dropdown mega-menu">
                         <!-- mega menu start -->
-                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">صفحات</a>
-                        <div class="mega-menu-wrapper">
+                        <a class="nav-link dropdown-toggle" href="category.html" ">فروشگاه</a>
+                        <div class=" mega-menu-wrapper">
                             <div class="container mega-menu-container">
                                 <div class="row">
                                     <div class="col-lg-3 col-sm-12">
@@ -170,37 +170,37 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </li><!-- mega menu start -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="blog.html">بلاگ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">درباره</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="contact.html">تماس</a>
-                    </li>
-                </ul>
-                <!-- /.navbar-nav -->
             </div>
-            <!-- /.navbar btn wrapper -->
-            <div class="responsive-mobile-menu">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mirex"
-                    aria-controls="mirex" aria-expanded="false" aria-label="تغییر ناوبری">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-            <!-- navbar collapse end -->
-            <div class="right-btn-wrapper">
-                <ul>
-                    <li class="search" id="search"><i class="fas fa-search"></i> </li>
-                    <li class="right-menu"> <a class="fas fa-user usericon" href="login.html"></a> </li>
-                    <li class="cart" id="cart"><i class="fas fa-shopping-basket"></i>
-                        <span class="badge">0</span>
-                    </li>
-                </ul>
-            </div>
+            </li><!-- mega menu start -->
+            <li class="nav-item">
+                <a class="nav-link" href="blog.html">بلاگ</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about.html">درباره</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="contact.html">تماس</a>
+            </li>
+            </ul>
+            <!-- /.navbar-nav -->
+        </div>
+        <!-- /.navbar btn wrapper -->
+        <div class="responsive-mobile-menu">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mirex"
+                aria-controls="mirex" aria-expanded="false" aria-label="تغییر ناوبری">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <!-- navbar collapse end -->
+        <div class="right-btn-wrapper">
+            <ul>
+
+                <li class="right-menu"> <a class="fas fa-user usericon" href="login.html"></a> </li>
+                <li class="cart" id="cart"><i class="fas fa-shopping-basket"></i>
+                    <span class="badge">0</span>
+                </li>
+            </ul>
+        </div>
 
 
         </div>
